--- a/Vagrant/files/01-pg_hba.conf
+++ b/Vagrant/files/01-pg_hba.conf
@@ -18,4 +18,5 @@ host    all             all             ::1/128                 scram-sha-256
 local   replication     all                                     trust
 host    replication     all             127.0.0.1/32            scram-sha-256
 host    replication     all             ::1/128                 scram-sha-256
+host    replication     user_rep        192.168.56.0/24         scram-sha-256
 host    replication     user_barman_stream        192.168.56.0/24         scram-sha-256
